--- a/Feedback.html
+++ b/Feedback.html
@@ -38,7 +38,7 @@
 					<a class="navbar-link" href="./Feedback.html">
 						<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
 							alt="This will display an animated GIF" />
-						Contact</a>
+						Feedback</a>
 				</li>
 				<li class="navbar-item">
 					<a class="navbar-link" href="./About.html">
@@ -53,7 +53,7 @@
 
 <body>
 	<section>
-		<form name="test" method="post" action="./process.php">
+		<form name="test" method="post" action="http://www.randyconnolly.com/tests/process.php">
 			<fieldset>
 				<legend>FEEDBACK</legend>
 				<table>
@@ -65,7 +65,7 @@
 							</p>
 							<p>
 								<label>Feedback</label><br />
-								<textarea name="description" rows="20" cols="100"
+								<textarea name="description" rows="17" cols="100"
 									placeholder="Adding a rich description will help with search results"></textarea>
 							</p>
 						</td>
@@ -99,7 +99,7 @@
 </body>
 
 
-<footer class="background">
+<footer class="background" style="text-align: center; color: #f0dac4;">
 	<p class="text-footer">Copyright ©-All rights are reserved</p>
 	<p>By Wentworth Institute of Technology students: Randy Batista, Tiffany Phan, Sabrina Ahmed, and Meagan Haradon</p>
 </footer>
