--- a/Feedback.html
+++ b/Feedback.html
@@ -10,6 +10,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script src="submit_form.js" defer></script>
 	<title>Contact</title>
 </head>
 
