--- a/Feedback.html
+++ b/Feedback.html
@@ -54,7 +54,7 @@
 
 <body>
 	<section>
-		<form name="test" method="post" action="http://www.randyconnolly.com/tests/process.php">
+		<form name="test" method="post" action="/submit-feedback">
 			<fieldset>
 				<legend>FEEDBACK</legend>
 				<table class="table-feedback">
@@ -66,11 +66,11 @@
 							</p>
 							<p>
 								<label>Subject:</label><br />
-								<input type="text" name="title" placeholder="Subject" />
+								<input type="text" name="subject" placeholder="Subject" />
 							</p>
 							<p>
 								<label>Feedback:</label><br />
-								<textarea name="description" rows="17" cols="100"
+								<textarea name="feedback" rows="17" cols="100"
 									placeholder="This will help us greatly for the development of the game"></textarea>
 							</p>
 						</td>
