--- a/Feedback.html
+++ b/Feedback.html
@@ -10,12 +10,12 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<script src="submit_form.js" defer></script>
+	<script src="./feedbackSubmit.js" defer></script>
 	<title>Contact</title>
 </head>
 
 <header id="navbar" >
-	<nav class="navbar-container container">
+	<nav class="navbar-container">
 		<a href="./Home.html" class="home-link">
 			<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
 			ELEMENT
@@ -53,60 +53,60 @@
 </header>
 
 <body>
-	<section>
-		<form name="test" method="post" action="/submit-feedback">
-			<fieldset>
-				<legend>FEEDBACK</legend>
-				<table class="table-feedback">
-					<tr>
-						<td colspan="2">
-							<p>
-								<label >Email:</label><br />
-								<input type="email" name="email" placeholder="Example@gmail.com" />
-							</p>
-							<p>
-								<label>Subject:</label><br />
-								<input type="text" name="subject" placeholder="Subject" />
-							</p>
-							<p>
-								<label>Feedback:</label><br />
-								<textarea name="feedback" rows="17" cols="100"
-									placeholder="This will help us greatly for the development of the game"></textarea>
-							</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
+	<div class="container">
+		<h1>Feedback Form</h1>
+		<form id="feedback-form" method="POST" action="./submit.php">
+	<fieldset>
+		<legend>Contact Information</legend>
+		<div class="row">
+			<div class="col-25">
+				<label for="name">Name:</label>
+			</div>
+			<div class="col-75">
+				<input type="text" id="name" name="name" required>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-25">
+				<label for="email">Email:</label>
+			</div>
+			<div class="col-75">
+				<input type="email" id="email" name="email" required>
+			</div>
+		</div>
+	</fieldset>
 
-							<div class="box-date-time">
-								<p>
-									<label>Date Taken: <br />
-										<input type="date" name="date" />
-								</p>
-								<p>
-									<label>Time Taken: <br />
-										<input type="time" name="time" />
-								</p>
-							</div>
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2">
-							<div class="rectangle-date-time">
-								<input type="submit" class="rounded"> <input type="reset" value="Clear Form" class="rounded">
-							</div>
-						</td>
-					</tr>
-				</table>
-			</fieldset>
-		</form>
-	</section>
-</body>
+	<fieldset>
+		<legend>Feedback</legend>
+		<div class="row">
+			<div class="col-25">
+				<label for="subject">Subject:</label>
+			</div>
+			<div class="col-75">
+				<input type="text" id="subject" name="subject" required>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-25">
+				<label for="message">Message:</label>
+			</div>
+			<div class="col-75">
+				<textarea id="message" name="message" required></textarea>
+			</div>
+		</div>
+	</fieldset>
 
-<footer class="background" style="text-align: center; color: #f0dac4;">
+	<button type="submit">Submit</button>
+</form>
+	</div>
+
+	<footer class="background" style="text-align: center; color: #f0dac4;">
 	<p class="text-footer">Copyright ©-All rights are reserved</p>
 	<p>By Wentworth Institute of Technology students: Randy Batista, Tiffany Phan, Sabrina Ahmed, and Meagan Haradon</p>
 </footer>
+
+
+
 
 </html>
 <!-- insert our images  -->
