--- a/About.html
+++ b/About.html
@@ -59,7 +59,7 @@
 			<p class="about-desc">This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany
 				and
 				Sabrina
-				created a game based on a version of Waterboy and Lavagirl we all played when we were younger
+				created a game based on a version of Fireboy and Watergirl we all played when we were younger
 				and enjoyed so much as kids. This game was developed as we reminisced our youth staying home playing simple
 				video games that would give our home computers viruses. As well as playing gameboy games of shark boy and
 				lava girl on the gameboy, however these games were complicated and a lot of reading for the young mind so
